# PP-5-SK2-quiz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-server.sh
Server/: CMakeLists.txt
Server/res/: defaultConfig.json
Server/src/: CMakeLists.txt  main.cpp  pch.h
Server/src/Enumerators/: ClientRequest.h  GameState.h  MessageType.h  Request.h  ServerAction.h
Server/src/Game/: CMakeLists.txt  Game.cpp  Game.h
Server/src/Game/Participants/: CMakeLists.txt  Host.cpp  Host.h  IGameParticipant.h  Player.cpp  Player.h
Server/src/Object/: CMakeLists.txt  Client.cpp  Client.h  Database.cpp  Database.h  Server.cpp  Server.h
Server/src/Server/: CMakeLists.txt  Client.cpp  Client.h  Database.cpp  Database.h  Server.cpp  Server.h
Server/src/Utility/: CMakeLists.txt  IO.cpp  IO.h  Json.cpp  Json.h  Log.cpp  Log.h  Socket.cpp  Socket.h
gui/: pom.xml
gui/src/main/java/: module-info.java
gui/src/main/java/put/edu/gui/: HelloApplication.java  HelloController.java  KahootApp.java  KahootApplication.java  Launcher.java  SceneController.java
gui/src/main/java/put/edu/gui/controllers/: HostViewController.java  MainSceneController.java  PlayerSceneController.java  PopupController.java
gui/src/main/java/put/edu/gui/game/: Game.java  HeartBeatRunner.java
gui/src/main/java/put/edu/gui/game/messages/: Answer.java  HeartBeat.java  JoinGameMessage.java  Message.java  MessageType.java  MessageTypePair.java  ServerErrorMessage.java  TestMessage.java
gui/src/main/java/put/edu/gui/game/models/: Answer.java  HeartBeat.java  Question.java  RankingRecord.java
gui/src/main/java/put/edu/gui/serverapi/: HeartBeatRunner.java  Message.java  Reader.java  ServerApi.java  ServerCommunicator.java  Writer.java
gui/src/main/resources/put/edu/gui/: hello-view.fxml  host-view.fxml  main-scene.fxml  main-view.fxml  player-scene.fxml  player-view.fxml  popup-view.fxml
src/: Server.cpp  Server.h  main.cpp  pch.h  util.cpp  util.h
(+28 files in other folders)
